<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacebookTutorialActivity">

    <Button
        android:id="@+id/EditProfileButton"
        android:layout_width="241dp"
        android:layout_height="68dp"
        android:onClick="onClickGoToEditProfileTut"
        android:text="@string/facebook_tutorial_3"
        android:textSize="@dimen/tutorialButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.620" />

    <Button
        android:id="@+id/UploadPicVidButton"
        android:layout_width="241dp"
        android:layout_height="68dp"
        android:onClick="onClickGoToUploadTut"
        android:text="@string/facebook_tutorial_2"
        android:textSize="@dimen/tutorialButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.480" />

    <Button
        android:id="@+id/AddFriendButton"
        android:layout_width="241dp"
        android:layout_height="68dp"
        android:onClick="onClickGoToAddFriendTut"
        android:text="@string/facebook_tutorial_1"
        android:textSize="@dimen/tutorialButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.340" />

    <TextView
        android:id="@+id/FacebookTutorialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_tutorials"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <Button
        android:id="@+id/FacebookBackButton"
        android:layout_width="123dp"
        android:layout_height="52dp"
        android:text="@string/back"
        android:textSize="@dimen/botButtons"
        android:onClick="onClickGoToHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/GoToFacebookButton"
        android:layout_width="169dp"
        android:layout_height="65dp"
        android:onClick="onClickGoToFacebook"
        android:text="@string/facebook_go_to"
        android:textSize="@dimen/botButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>