<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GmailTutorialActivity">

    <Button
        android:id="@+id/ComposeEmailButton"
        android:layout_width="241dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickGoToComposeEmailTut"
        android:text="@string/gmail_tutorial_3"
        android:textSize="@dimen/tutorialButtons"
        app:layout_constraintBottom_toTopOf="@+id/GoToGmailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OpenEmailButton" />

    <Button
        android:id="@+id/OpenEmailButton"
        android:layout_width="241dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClickGoToOpenEmailTut"
        android:text="@string/gmail_tutorial_2"
        android:textSize="@dimen/tutorialButtons"
        app:layout_constraintBottom_toTopOf="@+id/ComposeEmailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddAccountButton" />

    <Button
        android:id="@+id/AddAccountButton"
        android:layout_width="241dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClickGoToAddAccountTut"
        android:text="@string/gmail_tutorial_1"
        android:textSize="@dimen/tutorialButtons"
        app:layout_constraintBottom_toTopOf="@+id/OpenEmailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GmailTutorialText"
        app:layout_constraintVertical_bias="0.865" />

    <TextView
        android:id="@+id/GmailTutorialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gmail_tutorials"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="123dp"
        android:layout_height="52dp"
        android:onClick="onClickGoToHome"
        android:text="@string/back"
        android:textSize="@dimen/botButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/GoToGmailButton"
        android:layout_width="169dp"
        android:layout_height="52dp"
        android:text="@string/gmail_go_to"
        android:textSize="@dimen/botButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>