<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GmailOpenEmailActivity">

    <Button
        android:id="@+id/backToGmailButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="onClickGoToGmailTut"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/gmailOpenEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gmail_tutorial_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000D53"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <ImageView
        android:id="@+id/emailContents"
        android:layout_width="0dp"
        android:layout_height="223dp"
        android:contentDescription="@string/gmail_tutorial_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openEmailText1"
        app:srcCompat="@drawable/gmail_open_contents_marked" />

    <ImageView
        android:id="@+id/emailAttachment"
        android:layout_width="361dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attachmentBarText"
        app:srcCompat="@drawable/gmail_open_attachment" />

    <TextView
        android:id="@+id/openEmailText1"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/gmail_tut2_a"
        android:textColor="#050D37"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gmailOpenEmailText" />

    <TextView
        android:id="@+id/openEmailText2"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:text="@string/gmail_tut2_b"
        android:textColor="#050D37"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailContents" />

    <TextView
        android:id="@+id/attachmentBarText"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gmail_tut2_c"
        android:textColor="#050D37"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/openEmailText2" />

    <TextView
        android:id="@+id/attachmentDescText"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:text="@string/gmail_tut2_d"
        android:textColor="#050D37"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/backToGmailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAttachment" />

</androidx.constraintlayout.widget.ConstraintLayout>